Fix #796: add scrollbar when code line is too long

--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,7 @@ figure.highlight, code pre {
   padding: 6px;
   font-size: 12px;
   line-height: 16px;
+  overflow: auto;
 }
 
 .cards {
